implementing choice of list. Middle commit